# repro-rules-js-issue-447

./: .swcrc-esm  BUILD.bazel  README.md  WORKSPACE  package.json  pnpm-lock.yaml
src/: BUILD.bazel  src.test.ts  src.ts
