load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@npm//:defs.bzl", "npm_link_all_packages")

package(default_visibility = [
    "//visibility:public",
])

ts_config(
    name = "tsconfig",
    src = ":tsconfig.json",
)

copy_to_bin(
    name = "swcrc_esm",
    srcs = [".swcrc-esm"],
)

npm_link_all_packages(name = "node_modules")
